--- a/PictureTagger/PictureTagger_UI/PTMain.resx
+++ b/PictureTagger/PictureTagger_UI/PTMain.resx
@@ -123,4 +123,7 @@
   <metadata name="mainPTStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="openFileDialogImageImport.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>317, 17</value>
+  </metadata>
 </root>
